# NNCPP

./: .gitignore  CMakeLists.txt  Readme.md
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
